# ChangeLog for dev-ruby/amqp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/amqp/ChangeLog,v 1.14 2014/05/26 05:42:03 mrueg Exp $

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> amqp-0.6.7-r1.ebuild,
  amqp-1.0.2.ebuild, amqp-1.1.8.ebuild:
  Remove ruby18 target.

*amqp-1.3.0 (09 May 2014)

  09 May 2014; Hans de Graaff <graaff@gentoo.org> +amqp-1.3.0.ebuild:
  Version bump.

  10 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -amqp-1.1.6.ebuild,
  amqp-0.6.7-r1.ebuild:
  Cleanup old. Add ruby20 to amqp:0. Remove ree18.

*amqp-1.1.8 (22 Dec 2013)

  22 Dec 2013; Hans de Graaff <graaff@gentoo.org> +amqp-1.1.8.ebuild:
  Version bump.

*amqp-1.1.6 (10 Dec 2013)

  10 Dec 2013; Hans de Graaff <graaff@gentoo.org> +amqp-1.1.6.ebuild:
  Version bump. Add ruby20.

  23 Sep 2013; Hans de Graaff <graaff@gentoo.org> -amqp-0.9.8.ebuild:
  Cleanup.

*amqp-1.0.2 (10 Sep 2013)

  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> +amqp-1.0.2.ebuild:
  Version bump. Add ruby19.

  23 May 2013; Hans de Graaff <graaff@gentoo.org> -amqp-0.9.7.ebuild:
  Cleanup.

*amqp-0.9.8 (18 Oct 2012)

  18 Oct 2012; Hans de Graaff <graaff@gentoo.org> +amqp-0.9.8.ebuild:
  Version bump.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

*amqp-0.9.7 (29 Jul 2012)

  29 Jul 2012; Hans de Graaff <graaff@gentoo.org> +amqp-0.9.7.ebuild:
  Version bump.

  17 Jun 2012; Benedikt Böhm <hollow@gentoo.org> -amqp-0.6.7.ebuild,
  amqp-0.6.7-r1.ebuild:
  add ruby19 + cleanup

*amqp-0.6.7-r1 (06 Aug 2011)

  06 Aug 2011; Hans de Graaff <graaff@gentoo.org> +amqp-0.6.7-r1.ebuild:
  Run specs. Install documentation and examples. Add ree18.

*amqp-0.6.7 (25 Jul 2011)

  25 Jul 2011; Benedikt Böhm <hollow@gentoo.org> +amqp-0.6.7.ebuild,
  +metadata.xml:
  initial ebuild.required by app-admin/chef-expander.