@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST amqp-0.6.7.gem 83456 SHA256 7d7faf3e394d0a9c5c3574fbd87f9877b85dbd1fa419f5e1dfe84266f56cdfe3 SHA512 8dd993c5da6056b1904549aebe8c4807a014d82d22bb0b3be26f75cf09d9faa8c7bccc67fb06931bcb2b918ff12f12ee306a53329477d8af5a2a54652a9d0390 WHIRLPOOL e4f8372de915a94bdba801be691dcdd9cbe366a0bebf5fd0aab7bf8b7fbc34d1446cb6cb2b0d31aa66424649be558b676673212e9d46f5fe16da7c60434a8e21
 DIST amqp-1.0.2.gem 1159680 SHA256 ed5aa5fd296d3a9296000677f666604428d5e3cb30970500b6eb8ddefc06a171 SHA512 3a2bd4f3b28808262fc898e05645264c2a124b6ce8d6be7e49a53ea5c39f129cf8e1b172a930fb523c5d3d228a63f82359d169438eda5c52e6d8428e432a6388 WHIRLPOOL 8f14b3e66bc91605f63f34b8d6c3900e837fca6b223d7bdf521302f9f363e1613d569c032e8cc1c33a03cbe020b6a2fea0554078a7fca9db46d1d7579412a008
 DIST amqp-1.1.8.gem 1174528 SHA256 3effc0d3f816b214e588a3cb816d02ec537239609cf538e96a175791307386eb SHA512 c00f34242af6a73df11579c80262663769858a49904c1333635c6ec83259b3cbb5bf0ab6bd9fc8dacf4c406c64165f4f0466ec64313f8b715cfc3f732c7a4e1c WHIRLPOOL c21fc55e9597a77fc0fbc05fa238c618bc7c1a9bc8fd3e6e0b69ffe21cbe2b336f7bd04b8985a80cbea6797b807346e394182fa0b3ec65171ed53141dadb1d7b
 DIST amqp-1.3.0.gem 1176576 SHA256 fe0c6ccfc94fd6a52a3a094e283140b7288a7a212fcbd08997ebdfcaac233da9 SHA512 62f8ff88ccd4e100eb984d998ffcd0885293ecf0f90bc2d7b2b26a08ffef4ec8a94a9762b2f028f9416300bbee887edd47d5b2cbe47a62a77c0a48e7e0f78420 WHIRLPOOL e55c5f10b1cc63902a416a81fcc97ea718eddb1048ece11ecc38af350fabadfdd68b07273ac4a49bd70904d1bc7cfa55b544b4d18a03bdb550994ba41b91dab6
+DIST amqp-1.4.0.gem 1176576 SHA256 c79c45c9881c2c74ad2bbfdcee2fd11307d0e96760712902079a3e196dae37dc SHA512 456436d361b6b77ccf3004e4cb2110367f59653ba73bf8beb24745210f919f2039147f4527662f9c239b7fbb91d2b614ee60dbd05c071914df12cbc3640530f0 WHIRLPOOL 55d756df8cdee6f45b5c8ac3fbd8d3874aa671a93587d9e890f994bee57a72812a4b009fd8bf1c9d72f52ea11b367828f129b1724e865b4f128ee6af8e2fd857
 EBUILD amqp-0.6.7-r1.ebuild 708 SHA256 9ed62a44bb05ff160d19833028dbb05169491d2b4153b4d81844d8dc3387e7cd SHA512 8498cf653d1db02a4f94450de45bf6bc90c5daa34850f7c0842da1c474d154eeb3410585415396593fb97f928fa4a43b4c9c236fa81192a87b34679e0b1a0888 WHIRLPOOL b88605e1a1df7d38cf0809ef8c635e0612aad781ee97801c4fb4eb68afc1c17242b9f0de1bcb01813a3e12e04c88967cc8557a2e8f60bbb3648dac7633feecad
 EBUILD amqp-1.0.2.ebuild 1222 SHA256 76e4407fbe3e184a391c629f5cf567479094a341e5fd14db359cbd77b6f14505 SHA512 4f0f825285dee93fcdeffe0d3fb0ba9d71ebc233422d5821bb5e31b88d2bafc34a576865b6608d711b67a60a6804e1470ea99db78a318ac298f174e660cf0066 WHIRLPOOL 1c49f09460e877378d83ec630698d4a715c8d4b5c8ec1da37a77514f6e73a7e71cfec4dce2f280554732b0dbd7c11e399026ebfb53617a220115042c47e5a4cf
 EBUILD amqp-1.1.8.ebuild 1105 SHA256 508bb54ff7e4bb2e0fad76c79810685b84d4001d5d7b1574de1864cf79229620 SHA512 78eb4959dc7b91fc94f163fea3cb1fc5c622be15daa8c7536c7c016aaa5b26d4dd17f6a4777f0ae30f149ea362c78426df27deb2c54ddc059ff78ff2eed6259b WHIRLPOOL 1099261e519f4a770791c772deb7ffc348208356fa92afeb91ae47d984531152d735c4b5c6b4024a997e6e782120ec2062e63d9da430e2745afffca73881d932
 EBUILD amqp-1.3.0.ebuild 1109 SHA256 c67a87aa32e4b30ef9667f91655da0b17372ca3ec5d1a550e2a8f4735f4fe9f8 SHA512 e10536ec172718ffea2ccc4ad1dcc90395a882177f25f70637c77fa190b570da928f07b953b543189eed2ed80d84347294783b857027ad5b33d01fb220f6d7f2 WHIRLPOOL 63ad600adc3009618cf919e1064286ea6d0c21315b3b62998dc86d9c38b72f7dc48a5431d83df03b908ae7816aba3c8f98a4bcf49d921efd4380c5f8695468eb
-MISC ChangeLog 1939 SHA256 fdf853810bbefb0fe75ba54b722ca0f74602b08d9c184d8e0382de4975ce897d SHA512 fa2753d85b27cbcfc398ae467328afaa07455ef2bb2d4ef7ec33f5dedfd43d9a40fb1d3a4143386a1989eb30d0e07cd69b22368212727b1b15c1da02c69e1112 WHIRLPOOL 026594593e822fa2d6c8d73a980306e5629643db6bac4dc164fa98b5ce37a9708f44d5d1f497c2762f98514e2a34738e8a5c108223998fd71099d0e76eb9465f
+EBUILD amqp-1.4.0.ebuild 1116 SHA256 abb07370082e0e69ddf7e0cccc88d9b5b4c4df2db2a1bc2300b580aefff61a76 SHA512 338d02e44148f21e6ad9d82f1c5ab750520ad81c0d01fc40cfc2498367946db1249b671621e9ed3381383f925920372a54c641fb52650a997d6dc744a0028152 WHIRLPOOL b1c880ad5e5856396c86ba2d3b584deec48a2febc44a0b20c13304fea10a34ff9788dc51f4a0f61ad175782ab74ad9c413c86b1a18c2e6cdff00c20a2bc10da5
+MISC ChangeLog 2054 SHA256 844534a9553b5f6c0b613a7182cf95a105cda0c459f24ef765f8c019b10498e8 SHA512 7fa12a3fb111359a687ce1b3d86e4ca3b7da07c61d9f16d77b44230ae772f57489a751a461e0317d12d259e1bb65def30e0cc8a997db2839b340986975204757 WHIRLPOOL f04b194f1100eb54eeb94ed30ef78abc8c364fa2443d468825163a20c68a189ed3b2f49fa32f386abfbcad385184eb8c6f97061455f28f818ad0ceaca63c8cfb
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlOw/wMACgkQiIP6VqMIqNeIIAEAjoQH0SEq+RpIR/cZM6XTlkrd
+liw26ZUTtTsPP8c+/4wBAI/TPPJEOgc8Uj7vZBF3OmlziEd0lsK/IJumN5pTsCWz
+=VBNX
+-----END PGP SIGNATURE-----
