@@ -1,13 +1,13 @@
 AUX warsow-1.0-build.patch 16346 SHA256 626f23dc9c99eec2d1e1760e9247eb81079569ea139c165cb3ec908235e3aee7 SHA512 50131166cbd4ea39e9d77936d47ee9ca602f78f37f4f0351c188528deaebee1312b757ec4703b20a104cd23dbb5b68a948af774d67da07d1dac671c752bee4cf WHIRLPOOL 866797b10d0513269e72d2e71cda2d4860c8ca90322a426232dbcbd00cde68350a56ac484dacf350de11263ef329c5632dab5f8d0d8b08795191d6ac671ebe51
 AUX warsow-1.0-pic.patch 377 SHA256 300c220fb833424be66da460ad4ac1ef6c61cde0dc5b76e1e8e0b75f5ece3782 SHA512 1f712dbf83c3bca6a2f0424f2250133a23903da86c9045d0917ef5a18b311f6485af6cd5afc1bbcc8b47ff0e0f880154fc17f978c2e7400b6edb4b2ba33b2e18 WHIRLPOOL 536ddb836e09c15d0a3e5645066042164a556d608022c9892a82cd56552a489d6d424909878fe89ddf035a1a604d9ba4a73eabe563c6de51f44ccec1f9b7d854
-AUX warsow-1.03-pic.patch 377 SHA256 300c220fb833424be66da460ad4ac1ef6c61cde0dc5b76e1e8e0b75f5ece3782 SHA512 1f712dbf83c3bca6a2f0424f2250133a23903da86c9045d0917ef5a18b311f6485af6cd5afc1bbcc8b47ff0e0f880154fc17f978c2e7400b6edb4b2ba33b2e18 WHIRLPOOL 536ddb836e09c15d0a3e5645066042164a556d608022c9892a82cd56552a489d6d424909878fe89ddf035a1a604d9ba4a73eabe563c6de51f44ccec1f9b7d854
 AUX warsow-1.5.1-build.patch 20729 SHA256 afeae3eebb8b143ba735b362a653ab770a4d01576d4d0d4d555b4b307bf031e5 SHA512 5393933a169767b1024bf8e0f55efed54f1aa332b0b740e02abdbeb04610d7530976f10f2c1411e64e17a1cc5014e0c2b5fc56f484648135c9fe6093d22de81b WHIRLPOOL d03ccd08d2b8a2ec2815aaf514101ddb25fb216522fb9c42fea588fd85531edf75e9062aa8cd2ae5b1e30a7dff8bccd7866dcc11e40b42cfc4644816797ae7c0
+AUX warsow-1.5.1-pic.patch 377 SHA256 300c220fb833424be66da460ad4ac1ef6c61cde0dc5b76e1e8e0b75f5ece3782 SHA512 1f712dbf83c3bca6a2f0424f2250133a23903da86c9045d0917ef5a18b311f6485af6cd5afc1bbcc8b47ff0e0f880154fc17f978c2e7400b6edb4b2ba33b2e18 WHIRLPOOL 536ddb836e09c15d0a3e5645066042164a556d608022c9892a82cd56552a489d6d424909878fe89ddf035a1a604d9ba4a73eabe563c6de51f44ccec1f9b7d854
 DIST warsow.png 1692 SHA256 086968e72271b248ef32609ed1818ff9f5c355297b1eee3cbee9e41f4e18a954 SHA512 76476fd6f624b4043405fbddeaa0fa46338b96bf46a9b64434940d9a84738a20c25243ef1316048159698b6a70b3e0f26218da3332203a93944312e77ba22c8f WHIRLPOOL 94b7c77641d5a8f581de4eb0e4e91b71f25347248a6aa6c1160e8fefda92951daa3fbbf04aee4920fc9b53fb07872d3fb7d870d4207d13844e07afa51c93e85b
 DIST warsow_1.0_sdk.tar.gz 56525636 SHA256 2e394b5c50ad206723a59636ab93448f69d8602e710ab334451badf746870e22 SHA512 dee6591fb5ed7150e3e18db20b18366777dbacd4a465074eb3c978a04b7df5140e8a7817a5248542af06d2a6eb972ad986690f16e57ac08f753cccb2470d7bfe WHIRLPOOL e30772b49f37dede19d54e129cc1ca05bf9f01c9a10f372c9c420ceba25514c6a928c12ba61e140efc5ea8d46cbd6db403ca03aee215964173662127b9dbfd59
 DIST warsow_1.0_unified.tar.gz 518459004 SHA256 f933d251de4c92b6107d4db1eef5326baf4873d32a6e2f1c3daae14bc92e85ec SHA512 78706093fb4b8684893d9b497fd10f1ce3ef096b68bbf7d36ed2bc775fa649738f0153a723b2788ef6a54d30826ec96bc36899d2e5c230bf09022b98cc105aad WHIRLPOOL efdffd7f358c704a6c08eb1d8c91543db3b76805edba775f88570debfa1b4a9ac64772958831fff7d0be4d72f2d29abbb7610d115e92cdb0fd897a8e31b1059c
 DIST warsow_1.51_sdk.tar.gz 89191554 SHA256 ac635c654e088566d30d53e8fab21abd2d40762d7f4ab0e09faa827aac5c4f97 SHA512 64de961de91eee781b90442b275d24e13239dc2b594ece665c24c1d8da75e206a00ab43a2a6f193a953e9b0173b4a93dd18fa94b9b33d92eebcb776493a8b158 WHIRLPOOL 0a1db561eedfb4cafa2bb8f91e4de121adbbb171405828936788c9fa537a821855d89dd7c5b8a9ec186ece0655f1c821b38fa07fc0c2477c61681cf354d3d657
 DIST warsow_1.51_unified.tar.gz 601553865 SHA256 94510d85e4a245b5f8c0c715ae41b1d162c96e06dbfe75ccd99fffb9a76426b5 SHA512 a6c3392010de192d9984655193cb2c4359e9e3959bb39176416936c0227e3f6060bb19149688b89e36285572045c2ab19c6ef8de71ace7cd514e30196da83da9 WHIRLPOOL 1f0bf896dd0aad18e3bf3090d856a6ecbfabfa1873d62f9f5c0ccb1fa8dd0e34f0a22e8c095030c309adf32c85894bbadc77496916bddc6302f7646f500aa6ac
 EBUILD warsow-1.0.ebuild 3438 SHA256 2718ea8e803b16d5ae1d291ada956e5993a17e120b08e651e2e3463fde1f7668 SHA512 9565869cec3087019dcf7a66cc9f19825b1e9f713f1fd8875aab053bbcbf8d4c83e24faac5452ef7c4f6b6a5547a0df8483c84d0b78f80deca587bceb823410e WHIRLPOOL fdbd305c14f3db93ff8200277eac6865bee014c04f2b8a81b1a1df3c699f05c8be889119782adfd7bf5e3c406393946b45d685400c4b7f5f4c02965fbb22a82d
-EBUILD warsow-1.5.1.ebuild 3756 SHA256 cfd957a3431f011dff8fad1ff912f8183b7c0075cbc584aaca5aa7b40b7c9d47 SHA512 7beab6a2dbfbad9683499dc07355055c7ad354430c4be2cf9490413941ef3b5abfcc20f40a2e41cfa40bcab22ef436576364a34412899d83c54da29ff1ad4ea5 WHIRLPOOL fc0b1f9ff8511a478c16b278f6ccbeb751496376a5d2651d2705b6c2b4f0a5ed5d9a4a371858e61d53ed10fcb1c0f46698e1ce853f8b538f5e08f457340b4b58
-MISC ChangeLog 9020 SHA256 d6b2966fc2058e28917153eeaacf2213eb670f46dbe20abd0ebe7fb02d38452f SHA512 f6dff0561ae587da28489d91bc1a5063564e5b6ff46decff7e1ba53ffe6ccd96727c564bb7510854ad54fc5fe31c6074f1ee7bd2348a2b9b8086169535308a6c WHIRLPOOL c632e465ba9630f0ade74647ab9174e6f61018d83281cca4bbd2115d4aa8bc4782dc128a94ca2927a3d899f0b8dc4f34be51682e1623472c93a4da4c4131bf4e
+EBUILD warsow-1.5.1.ebuild 3761 SHA256 bbdca726cf52b774ebd67b90f2e4c75f5d28384545787c1980a957105a3052b9 SHA512 9c111e7fe48baa9a17a230d7d3eb8715bb5c65fdec0ec8a048388f61c11a29bc76cdd057281c78cdfc61172da60ff573ffe6561b7e47647be1d6cc80e9477643 WHIRLPOOL b4127ed29007bbbdea2b55cf6efaca78af970f41058d90ae4588f4fe35bf9061973c634e23d51d79200ddfeb5f6bc9fc9f169be1ccb87ca9a8cc7f7e1f5e87bb
+MISC ChangeLog 9232 SHA256 15e8f9291b1b2594c1949df831dc35a1bbf92cd6266abbc481621c3d2f41da89 SHA512 f3d659d5af43de1afa674889746bdd6e7b03c86442797cd14c9ebe294f173aea598b7bac36de2c06d1d429a899746a56ad24364a3c80524938cba4cb8222df6b WHIRLPOOL 4c392cdfc5ad65cf2b719e60ea8d7959e639633779f35344c4313a43c70b9a30265e91652d54a4b4e6e3d0a16ee99a5b0d140835829537707376b1eed3acb29a
 MISC metadata.xml 347 SHA256 016dbabb997c28f241f054760d9b81b1c43f5161de6d53936a2ebeb78bccdbea SHA512 34e3d6eae3b4665eac573b096d83a2841aee4488cc1a237e54e6e12c0c7ad8caefbbde6b563d1421c9d68cf7fb2b6c2446dfeddb1390971a7630b5efa494cb77 WHIRLPOOL 9d4cbde23eacc798cb4f1ac0c504963d349619229a5c2e926d8fc1348b1fefc53e999cc21e0be0cdca58affd1bfd4a275ae633709af78ca3dc808431fa365db3
