@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( test? ( dev-ruby/multi_json[ruby_targets_ruby19] dev-ruby/evented-spec[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/multi_json[ruby_targets_ruby20] dev-ruby/evented-spec[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/multi_json[ruby_targets_ruby21] dev-ruby/evented-spec[ruby_targets_ruby21] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby19] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby20] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby21] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=AMQP client implementation in Ruby/EventMachine
+EAPI=5
+HOMEPAGE=http://amqp.rubyforge.org/
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
+KEYWORDS=~amd64 ~x86
+LICENSE=Ruby
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby19] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby20] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/eventmachine-0.12.4[ruby_targets_ruby21] >=dev-ruby/amq-protocol-1.9.2[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=1.4
+SRC_URI=mirror://rubygems/amqp-1.4.0.gem
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=6ddfbc8fdd3390180287f2d31ec4e194
