@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare pretend setup unpack
-DEPEND=>=dev-libs/libRocket-1.2.1_p20130110 media-libs/freetype net-misc/curl sys-libs/zlib !dedicated? ( media-libs/libpng:0 media-libs/libsdl media-libs/libtheora media-libs/libvorbis x11-libs/libX11 x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXxf86dga x11-libs/libXxf86vm virtual/jpeg virtual/opengl openal? ( media-libs/openal ) ) app-arch/unzip x11-misc/makedepend !dedicated? ( x11-proto/xineramaproto x11-proto/xf86dgaproto x11-proto/xf86vidmodeproto ) openal? ( virtual/pkgconfig ) >=sys-apps/sed-4
+DEPEND=>=dev-libs/libRocket-1.2.1_p20130110 media-libs/freetype net-misc/curl sys-libs/zlib !dedicated? ( media-libs/libpng:0 media-libs/libsdl media-libs/libtheora media-libs/libvorbis x11-libs/libX11 x11-libs/libXi x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXxf86dga x11-libs/libXxf86vm virtual/jpeg virtual/opengl openal? ( media-libs/openal ) ) app-arch/unzip x11-misc/makedepend !dedicated? ( x11-proto/xineramaproto x11-proto/xf86dgaproto x11-proto/xf86vidmodeproto ) openal? ( virtual/pkgconfig ) >=sys-apps/sed-4
 DESCRIPTION=Multiplayer FPS based on the QFusion engine (evolved from Quake 2)
 EAPI=5
 HOMEPAGE=http://www.warsow.net/
 IUSE=debug dedicated irc openal server
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2 ZLIB warsow
-RDEPEND=>=dev-libs/libRocket-1.2.1_p20130110 media-libs/freetype net-misc/curl sys-libs/zlib !dedicated? ( media-libs/libpng:0 media-libs/libsdl media-libs/libtheora media-libs/libvorbis x11-libs/libX11 x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXxf86dga x11-libs/libXxf86vm virtual/jpeg virtual/opengl openal? ( media-libs/openal ) ) games-misc/games-envd
+RDEPEND=>=dev-libs/libRocket-1.2.1_p20130110 media-libs/freetype net-misc/curl sys-libs/zlib !dedicated? ( media-libs/libpng:0 media-libs/libsdl media-libs/libtheora media-libs/libvorbis x11-libs/libX11 x11-libs/libXi x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXxf86dga x11-libs/libXxf86vm virtual/jpeg virtual/opengl openal? ( media-libs/openal ) ) games-misc/games-envd
 SLOT=0
 SRC_URI=http://www.warsow.eu/warsow_1.51_sdk.tar.gz http://www.warsow.eu/warsow_1.51_unified.tar.gz mirror://gentoo/warsow.png
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	32bd61b45c2f57e468b4ee7311fec8f5	games	016d5de1968de77e56a90938ed6e5aba	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c7fa2ccadabdc870b9c0f7414d2e3b03
+_md5_=b3cb51a944712a9579cafe8b495649e0
